# techcredit

./: .env.example  .gitignore  README.md  environment.yml  log.txt  pyproject.toml  pyrightconfig.json  repo_metadata.json  repos.json
docs/: tech_credit_patterns.json
helper/: secrets_loader.py
rag/: context_doc_content.txt  preview.ipynb  preview_old.ipynb  rag.ipynb  references.json  repo_metadata.json  repos.json  responses.json
secrets/: README.md  secrets_loader.py
src/: main.py
src/tcm/database/: database_chroma.py
src/tcm/github/: github_loader.py
src/tcm/helper/: helper_constants.py  helper_document.py  helper_filters.py  helper_secrets.py  helper_state.py
src/tcm/rag/: rag_embeddings.py  rag_llm.py
src/tcm/splitter/: splitter_token_splitter.py  splitter_webscraper.py
